# pre-commit-workshop

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  example.py  pyproject.toml
src/pr_commit/: __init__.py  pr_commit.py
src/your_pkg/: your_module.py
