[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-commit"
version = "0.1.0"
authors = [{name = "Adam Aaronson", email = "adamaaronson@gmail.com"},]
description = "A prior-to-commiting hook that forbids all fifth glyphs in naming and coding."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",  # update later
    "Programming Language :: Python"
]
urls.Homepage = "https://example.com"
urls.Documentation = "https://example.com/docs"

dependencies = []
requires-python = ">=3.8"
optional-dependencies.dev = [
    "pre-commit",  # so you can run hooks on the codebase
    "pytest",  # remember to add tests for your hook
]

scripts.pr-commit = "pr_commit.pr_commit:main"

# optional (if you are making a package)
[tool.setuptools.packages.find]
where = ["src"]

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
    "SS06",
]
